--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.27.0",
     "pinia": "^2.1.7",
-    "sass": "1.77.6",
+    "sass": "^1.77.6",
+    "sass-loader": "^16.0.1",
     "typescript": "^5.4.2",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-fonts": "^1.1.1",
