--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
+    "firebase": "^10.13.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vuefire": "^3.2.0",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
