--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
     "firebase": "^10.13.1",
+    "firebase-tools": "^13.17.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuefire": "^3.2.0",
