--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -33,6 +33,12 @@ jobs:
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
+      
+      - name: Set up Firebase credentials
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > "${HOME}/firebase-service-account.json"
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase-service-account.json"
 
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting --token "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+        run: firebase deploy --only hosting
