fix(build): auth with google application credentials

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GOOGLE_APPLICATION_CREDENTIALS: google-application-credentials.json
 
     steps:
       - name: Checkout Repository
@@ -34,11 +36,14 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
       
-      - name: Set up Firebase credentials
+      - name: Prepare Google Application Credentials
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > "${HOME}/firebase-service-account.json"
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: "${HOME}/firebase-service-account.json"
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | base64 --decode > "google-application-credentials.json"
 
       - name: Deploy to Firebase Hosting
         run: firebase deploy --only hosting
+
+      - name: Remove credentials file
+        if: success() || failure()
+        run: |
+          rm google-application-credentials.json
