--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
+    "exceljs": "^4.4.0",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.17.0",
     "roboto-fontface": "*",
