--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "exceljs": "^4.4.0",
     "firebase": "^10.13.1",
     "firebase-tools": "^13.17.0",
+    "html2pdf.js": "^0.10.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuefire": "^3.2.0",
